# stack-cbre

./: .gitignore  docker-compose.yml  pyproject.toml
src/Fusoes_Aquisicoes/: doc.md  scrape_fusoes_aquisicoes.py
src/Neofeed/: doc.md  scrape_neofeed_news.py
src/Startupi/: doc.md  scrape_startupi_investments.py
src/Startups/: doc.md  scrape_startups_news.py
src/config/: db_connection.py
